load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "jwxtest",
    srcs = ["jwxtest.go"],
    importpath = "github.com/lestrrat-go/jwx/v3/internal/jwxtest",
    visibility = ["//:__subpackages__"],
    deps = [
        "//jwa",
        "//jwe",
        "//jwk",
        "//jwk/ecdsa",
        "//jws",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":jwxtest",
    visibility = ["//:__subpackages__"],
)
